[package]
name = "bal-pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitcoincore-rpc = "0.19.0"
sqlite = "0.34.0"
confy = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] } # <- Only one serde version needed (serde or serde_derive) 

