[package]
name = "bal-pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.21"
env_logger = "0.11.5"
bitcoincore-rpc = "0.19.0"
sqlite = "0.34.0"
confy = "0.6.1"
serde = { version = "1.0.152", features = ["derive"] } # <- Only one serde version needed (serde or serde_derive) 
zmq = "0.10.0"
hex = "0.4.3"
byteorder = "1.5.0"

